# acc_sdk

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
acc_sdk/: __init__.py  acc.py  account_users.py  authentication.py  base.py  business_units.py  companies.py  data_connector.py  data_management.py  forms.py  photos.py  project_users.py  projects.py  sheets.py  userprofile.py
docs/: account_users_api.md  authentication.md  business_units_api.md  companies_api.md  data_connector_api.md  forms_api.md  photos_api.md  project_users_api.md  projects_api.md  sheets_api.md  user_profile_api.md
scripts/: manage_project_user.py
tests/: test_2legged.py  test_3legged.py  test_account_users.py  test_data_connector.py  test_forms.py  test_photos.py  test_project_users.py  test_projects.py
tests/static/css/: style.css
tests/templates/: dashboard.html  index.html
